# yolov5_trt

./: CMakeLists.txt  README.md  main.cpp  run_video.cpp
config/: properties.json
include/: calibrator.h.bak  common.h  common.hpp  config.h  ctdetApi.h  ctdetNet.h  cuda_utils.h  logging.h  network.h  plugin_factory.h  upsample_layer.h  utils.h  yololayer.h
src/: calibrator.cpp.bak  common.cpp  config.cpp  ctdetApi.cpp  ctdetNet.cpp  network.cpp  plugin_factory.cpp  upsample_layer.cpp  upsample_layer.cu  utils.cpp  yololayer.cu  yolov5.cpp  yolov5.cpp.bak
